--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="#" class="logo">mg</a>
+            <a href="#" class="logo"><img src="./imagens/logo1.png" alt=""></a>
             <button class="hamburger"> </button>
             <ul class="nav-list">
                 <li><a href="#">Inicio</a></li>
@@ -36,7 +36,7 @@
         <div class="corpo">
             <section id="inicio" class="inicio">
                 <div class="flex">
-                    <H1> Mantenha a calma <br> e deixe a contabilidade<br> comigo!</H1>
+                    <H1> MANTENHA A CALMA  <br> e deixe a contabilidade <br> comigo!</H1>
                     <P> Estou aqui para gerenciar seus números com eficiência e precisão.</P>
                     <div class="botao1">
                         <input type="button" value="Contato">
