--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--bott strap icon-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--fim do boot strap-->
+    <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Cris Contabilidades</title>
 </head>
