--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="corpo">
             <section id="inicio" class="inicio">
                 <div class="flex">
-                    <H1> MANTENHA A CALMA  <br> e deixe a contabilidade <br> comigo!</H1>
+                    <H1> MANTENHA A CALMA  <br>deixe a contabilidade <br> comigo!</H1>
                     <P> Estou aqui para gerenciar seus números com eficiência e precisão.</P>
                     <div class="botao1">
                         <input type="button" value="Contato">
@@ -103,7 +103,7 @@
             olá@reallygreatsite.com
             
             SOCIAL</h4>
-        <div class="img"><img src="./imagens/003.jpg" alt=""></div>
+        <div class="amigo"><img src="" alt=""></div>
         </div>
       </section>
 
