--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <a href="#" class="logo"><img src="./imagens/logo1.png" alt=""></a>
             <button class="hamburger"> </button>
             <ul class="nav-list">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">sobre</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Contatos</a></li>
+                <li><a href="#start">Inicio</a></li>
+                <li><a href="#sobre">sobre</a></li>
+                <li><a href="#especialidades">Serviços</a></li>
+                <li><a href="#contatos">Contatos</a></li>
             </ul>
         </nav>
  
