--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@
         <div class="corpo">
             <section id="inicio" class="inicio">
                 <div class="flex">
-                    <H1> MANTENHA A CALMA  <br>deixe a contabilidade <br> comigo!</H1>
-                    <P> Estou aqui para gerenciar seus números com eficiência e precisão.</P>
+                    <H1> <span> MANTENHA  A CALMA </span><br>e deixe a contabilidade  <br> comigo!</H1>
+                    <P> Estou aqui para gerenciar seus <br>números com eficiência e precisão.</P>
                     <div class="botao1">
                         <input type="button" value="Contato">
                     </div>
                     <div class="img">
-                        <img src="./imagens/0002.png" alt="">
+                        <picture>
+                            <source media="(max-width: 670px )" srcset="./imagens/1mobile.png">
+                            <img src="./imagens/0002.png" alt="Primeiro mascote do android">
+                        </picture>
                     </div>
                 </div>
 
@@ -53,10 +56,10 @@
 
     <section id="sobre">
         <div class="text">
-            <h3>Por que eu ?</h2>
-            <h2>Eu sou muito qualificada para ajuda-lo</p>
+            <h3>Por que eu ?</h3>
+            <h2>Eu sou muito qualificada para ajuda-lo!</h2>
             <p>Lorem ipsum dolor sit <br>amet consectetur adipisicing elit. Sunt vel et nesciuntbr
-                <br> neque quos. Perspiciatis eaque deserunt ipsam <br>consequuntur sint ullam corrupti, <br> similique sed laboriosam dolorum nostrum tempore suscipit placeat!</h3>
+                <br> neque quos. Perspiciatis eaque deserunt ipsam <br>consequuntur sint ullam corrupti, <br> similique sed laboriosam dolorum nostrum tempore suscipit placeat!</p>
 
         </div>
         
@@ -64,7 +67,7 @@
 
     <section class="especialidades" id="especialidades">
         <div class="interface">
-          <h2 class="titulo">O que nós podemos <br> fazer por você!</span></h2>
+          <h2 class="titulo">O que nós podemos  fazer<span> por você!</span></h2>
           <div class="lex">
             <div class="especialidadebox">
                 <i class="bi bi-file-text"></i>
