--- a/index.html
+++ b/index.html
@@ -109,15 +109,17 @@
                     <source media="(max-width: 670px )" srcset="./imagens/2mobile.jpeg">
                     <img src="./imagens/002.jpg" alt="Primeiro mascote do android">
                 </picture>
-            <h5>TELEFONE
+            <p>TELEFONE :(31) 456-7890 </p>
 
-                (123) 456-7890
+               <div class="botaosocial">
+                    <a href="#" target="_blank"><button><i class="bi bi-facebook"></i></button></a>
+                    <a href="#" target="_blank"><button><i
+                          class="bi bi-instagram"></i></button></a>
+                    <a href="#"><button><i class="bi bi-whatsapp"></i></button></a>
+                  </div>
+                
 
-                E-MAIL
-
-                olá@reallygreatsite.com
-
-                SOCIAL</h4>
+                </h4>
         </div>
     </section>
 
@@ -128,15 +130,7 @@
     <div class="interface"></div>
     <div class="line-footer">
       <div class="vex">
-        <div class="logo-footer">
-          <a href="#interface"><img src="./imagens/logo1.png" alt="logo"><i class="bi bi-arrow-up-square-fill"></i></a>
-        </div>
-        <div class="botaosocial">
-          <a href="https://github.com/DevDaviDias" target="_blank"><button><i class="bi bi-github"></i></button></a>
-          <a href="https://www.instagram.com/devdavidias?igsh=aG5tcXNtaHZnZmlw" target="_blank"><button><i
-                class="bi bi-instagram"></i></button></a>
-          <a href="#"><button><i class="bi bi-whatsapp"></i></button></a>
-        </div>
+        
       </div>
     </div>
     <div class="line-footer borda">
