--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
 
            
             </div>
-            <h6>ENTRE EM CONTATO COMIGO .</h6> <div class="amigo">
+           <div class="amigo">
                 <picture>
                     <source media="(max-width: 670px )" srcset="./imagens/2mobile.jpeg">
                     <img src="./imagens/002.jpg" alt="Primeiro mascote do android">
-                </picture>
+                </picture> 
+                <h6>ENTRE EM CONTATO COMIGO .</h6> 
             <p>TELEFONE :(31) 456-7890 </p>
 
                <div class="botaosocial">
