--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="start">
         <div class="corpo">
             <section id="inicio" class="inicio">
-                <div class="flex">
+                <div class="lex">
                     <H1> <span> MANTENHA A CALMA </span><br>e deixe a contabilidade <br> comigo!</H1>
                     <P> Estou aqui para gerenciar seus <br>números com eficiência e precisão.</P>
                     <div class="botao1">
